--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Tlezip/GraphQL-tutorial/issues"
   },
-  "homepage": "https://github.com/Tlezip/GraphQL-tutorial#readme"
+  "homepage": "https://github.com/Tlezip/GraphQL-tutorial#readme",
+  "dependencies": {
+    "graphql": "^15.3.0"
+  }
 }
