--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.5"
   }
 }
